--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,8 +34,8 @@
   }
 
   .safety-flex {
-    grid-template-columns: 1fr;
-    padding: 10px;
+    grid-template-columns: 1fr !important;
+    padding: 10px !important;
   }
 
   .s-text {
